created the cities section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -85,7 +85,6 @@ h2:after {
 }
 
 /* ---- PARAGRAPHS ---- */
-
 .long-copy {
     line-height: 145%;
     width: 70%;
@@ -104,6 +103,35 @@ h2:after {
     color: #e67e22;
     margin-bottom: 10px;
 }
+
+.icon-small {
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    color: #e67e22;
+    font-size: 120%;
+    margin-right: 10px;
+    line-height: 120%;
+    vertical-align: middle;
+    margin-top: -5px;
+}
+
+/* ---- LINKS ---- */
+a:link,
+a:visited {
+    color: #e67e22;
+    text-decoration: none;
+    padding-bottom: 1px;
+    transition: border-bottom 0.2s, color 0.2s;
+}
+
+a:hover,
+a:active {
+    color: #555555;
+}
+
+
+
 
 /* ---- BUTTONS ---- */
 .btn:link,
@@ -149,7 +177,6 @@ h2:after {
 /* --------------------------------------------- */
 /* HEADER */
 /* --------------------------------------------- */
-
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("img/hero.jpg");
     background-size: cover;
@@ -209,7 +236,6 @@ header {
 /* --------------------------------------------- */
 /* FEATURES */
 /* --------------------------------------------- */
-
 .section-features .long-copy {
     margin-bottom: 30px;
 }
@@ -217,7 +243,6 @@ header {
 /* --------------------------------------------- */
 /* MEALS */
 /* --------------------------------------------- */
-
 .section-meals {
     padding: 0;
 }
@@ -256,7 +281,6 @@ header {
 /* --------------------------------------------- */
 /* HOW IT WORKS */
 /* --------------------------------------------- */
-
 .section-steps {
     background-color: #f4f4f4;
 }
@@ -304,6 +328,18 @@ header {
     margin-right: 10px;
 }
 
+/* --------------------------------------------- */
+/* CITIES */
+/* --------------------------------------------- */
+.box img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+.city-feature {
+    margin-bottom: 5px;
+}
 
 
 
