--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -81,7 +81,19 @@ h2:after {
 }
 
 .x-margin-top {
-    margin-top: 70px;
+    margin-top: 50px;
+}
+
+.x-margin-bottom {
+    margin-bottom: 50px;
+}
+
+.x-padding-top {
+    padding-top: 50px;
+}
+
+.x-padding-bottom {
+    padding-bottom: 50px;
 }
 
 /* ---- PARAGRAPHS ---- */
@@ -132,7 +144,8 @@ a:active {
 
 /* ---- BUTTONS ---- */
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -142,7 +155,8 @@ a:active {
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit] {
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -156,8 +170,11 @@ a:active {
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {
     background-color: #cf6d17;
+    cursor: pointer;
 }
 
 .btn-full:hover,
@@ -434,12 +451,33 @@ cite img {
     padding: 5px 0;
 }
 
+/* --------------------------------------------- */
+/* FORM */
+/* --------------------------------------------- */
+.contact-form {
+    width: 60%;
+    margin: 0 auto;
+}
 
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
 
+textarea {
+    height: 100px;
+}
 
+input[type=checkbox] {
+    margin: 10px 5px 10px 0;
+}
 
-
-
+*:focus {outline: none;}
 
 
 
