--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -159,46 +159,47 @@ a:active {
 .btn:visited,
 input[type=submit] {
     display: inline-block;
-    padding: 10px 30px;
+    padding: 15px 30px;
     font-weight: 300;
     text-decoration: none;
-    border-radius: 200px;
+    border-radius: 10px;
     -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
     -o-transition: background-color 0.2s, border 0.2s, color 0.2s;
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
+
 .btn-full:link,
 .btn-full:visited,
 input[type=submit] {
-    background-color: #e67e22;
-    border: 1px solid #e67e22;
+    background-color: #dd39ba;
+    border: 1px solid #dd39ba;
     color: #fff;
     margin-right: 15px;
 }
 
 .btn-ghost:link,
 .btn-ghost:visited {
-    border: 1px solid #e67e22;
-    color: #e67e22;
+    border: 1px solid #dd39ba;
+    color: #dd39ba;
 }
 
 .btn:hover,
 .btn:active,
 input[type=submit]:hover,
 input[type=submit]:active {
-    background-color: #cf6d17;
+    background-color: #dd39ba;
     cursor: pointer;
 }
 
 .btn-full:hover,
 .btn-full:active {
-    background-color: #cf6d17;
+    background-color: #dd39ba;
 }
 
 .btn-ghost:hover,
 .btn-ghost:active {
-    border: 1px solid #cf6d17;
+    border: 1px solid #dd39ba;
     color: #fff;
 }
 
@@ -206,14 +207,19 @@ input[type=submit]:active {
 /* HEADER */
 /* --------------------------------------------- */
 header {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("img/hero.jpg");
-    background-image: -o-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("img/hero.jpg");
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("img/hero.jpg");
+    background-color: #dd39ba;
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    height: 15vh;
     background-attachment: fixed;
 }
+
+.section-header img {
+    width: 100%;
+    height: auto;
+}
+
+
 
 .hero-text-box {
     position: absolute;
@@ -631,7 +637,7 @@ footer {
 
 footer p {
     color: #888;
-    text-align: center;
+    text-align: left;
     margin-top: 20px;
 }
 
