--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -168,7 +168,6 @@ input[type=submit] {
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
-
 .btn-full:link,
 .btn-full:visited,
 input[type=submit] {
@@ -218,8 +217,6 @@ header {
     width: 100%;
     height: auto;
 }
-
-
 
 .hero-text-box {
     position: absolute;
@@ -288,7 +285,6 @@ header {
     margin-top: 30px;
     cursor: pointer;
 }
-
 
 .hamburger {
     font-size: 200%;
@@ -565,6 +561,7 @@ footer {
     background-color: #333;
     padding: 50px;
     font-size: 90%;
+    height: 390px;
 }
 
 .footer-nav {
