--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -295,15 +295,19 @@ header {
 /* Sticky nav */
 .sticky {
     position: fixed;
+    height: 80px;
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.98);
+    background-color:#dd39ba;
     box-shadow: 0 2px 2px #efefef;
     z-index: 9999;
 }
 
-.sticky .main-nav { margin-top: 15px; }
+.sticky .main-nav {
+    padding-top: 20px;    
+    margin-top: 13px; 
+}
 
 .sticky .main-nav li a:link,
 .sticky .main-nav li a:visited {
@@ -312,7 +316,10 @@ header {
 }
 
 .sticky .logo { display: none; }
-.sticky .logo-black { display: block; }
+.sticky .logo-black { 
+    display: block;
+    margin: 13px 0; 
+}
 
 /* --------------------------------------------- */
 /* FEATURES */
