--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -81,6 +81,7 @@ h3 {
     margin-bottom: 15px;
 }
 
+/*
 h2:after {
     display: block;
     height: 2px;
@@ -89,6 +90,7 @@ h2:after {
     width: 100px;
     margin: 30px auto 0 auto;
 }
+*/
 
 .x-margin-top {
     margin-top: 50px;
