--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -441,12 +441,7 @@ header {
 /* TESTIMONIALS */
 /* --------------------------------------------- */
 .section-testimonials {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url("img/back-customers.jpg");
-    background-image: -o-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("img/back-customers.jpg");
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("img/back-customers.jpg");
-    background-size: cover;
-    color: #fff;
-    background-attachment: fixed;
+    background-color: black;
 }
 
 blockquote {
