--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -205,6 +205,19 @@ input[type=submit]:active {
 }
 
 /* --------------------------------------------- */
+/* DETAILS IN THE TOP */
+/* --------------------------------------------- */
+.section-details {
+    margin: 0;
+    background-color: #000;
+    height: 2em;
+    color: #dd39ba;
+    font-size: 1em;
+    text-align: right;
+    padding: 10px 40px 10px 0;
+}
+
+/* --------------------------------------------- */
 /* HEADER */
 /* --------------------------------------------- */
 header {
@@ -213,6 +226,10 @@ header {
     background-position: center;
     height: 15vh;
     background-attachment: fixed;
+}
+
+.topnav {
+    display: none;
 }
 
 .section-header img {
@@ -292,6 +309,49 @@ header {
     color: #fff;
     display: none;
 }
+
+/* NAVIGATION */ 
+    /* Style the navigation menu */
+    .topnav {
+        overflow: hidden;
+        background-color: #dd39ba;
+        position: relative;
+    }
+
+    /* Hide the links inside the navigation menu (except for logo/home) */
+    .topnav #myLinks {
+        display: none;
+    }
+
+    /* Style navigation menu links */
+    .topnav a {
+        color: white;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+    }
+
+    /* Style the hamburger menu */
+    .topnav a.icon {
+        background: black;
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    /* Add a grey background color on mouse-over */
+    .topnav a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+
+    /* Style the active link (or home/logo) */
+    .active {
+        background-color: #4CAF50;
+        color: white;
+    }
 
 /* Sticky nav */
 .sticky {
@@ -709,7 +769,7 @@ footer p {
 
     .row { padding: 0 2%; }
 
-    .hamburger {
+    .topnav {
         display: none;
     }
 }
@@ -718,7 +778,7 @@ footer p {
 @media only screen and (max-width: 1024px) {
     body { font-size: 18px; }
 
-    section { padding: 60px 0; }
+    /*section { padding: 60px 0; } */
 
     .long-copy {
         width: 80%;
@@ -756,7 +816,7 @@ footer p {
         display: inline-block;
     }
 
-    .hamburger {
+    .topnav {
         display: none;
     }
 }
@@ -764,7 +824,8 @@ footer p {
 /* phones to small tablets: from 480px to 770px */
 @media only screen and (max-width: 770px) {
     body { font-size: 16px; }
-    section { padding: 30px 0; }
+
+    /*section { padding: 30px 0; }*/
 
     .row,
     .hero-text-box { padding: 0 4%; }
@@ -825,36 +886,12 @@ footer p {
 
     /* New code */
 
-    .hamburger{
-        display: inline-block;
-        background:none;
-        position:absolute;
-        top:20px;
-        right:20px;
-        line-height:45px;
-        padding:5px 15px 0px 15px;
-        color:#999;
-        border:0;
-        font-size:2em;
-        font-weight:bold;
-        cursor:pointer;
-        outline:none;
-        z-index:10000000000000;
+    header {
+        display: none;
     }
-    .cross{
-        background:none;
-        position:absolute;
-        top:0px;
-        right:0;
-        padding:7px 15px 0px 15px;
-        color:#999;
-        border:0;
-        font-size:3em;
-        line-height:65px;
-        font-weight:bold;
-        cursor:pointer;
-        outline:none;
-        z-index:10000000000000;
+
+    .topnav {
+        display: block;
     }
 }
 
