--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -92,6 +92,9 @@ h2:after {
 }
 */
 
+ul, li {
+    list-style-type: none;
+}
 .x-margin-top {
     margin-top: 50px;
 }
@@ -250,7 +253,7 @@ header {
 .logo {
     height: 200px;
     width: auto;
-    margin-top: -33px;
+    margin: -33px -20px;
 }
 
 .logo-black {
@@ -330,21 +333,24 @@ header {
         text-decoration: none;
         font-size: 17px;
         display: block;
+        margin: 30px;
     }
 
     /* Style the hamburger menu */
     .topnav a.icon {
-        background: black;
+        border-radius: 10%;
+        background:#8000ff;
         display: block;
         position: absolute;
         right: 0;
         top: 0;
+        opacity: 0.5;
     }
 
     /* Add a grey background color on mouse-over */
     .topnav a:hover {
-        background-color: #ddd;
-        color: black;
+        background-color: white;
+        color: #130125;
     }
 
     /* Style the active link (or home/logo) */
