--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -43,9 +43,6 @@ body {
     margin: 0 auto;
 }
 
-.section-features {
-    padding: 80px 0;
-}
 
 .box {
     padding: 1%;
@@ -55,8 +52,8 @@ body {
 h1,
 h2,
 h3 {
-    font-weight: 300;
-    text-transform: uppercase;
+    font-weight: 400;
+    color: #dd39ba;
 }
 
 h1 {
@@ -164,9 +161,10 @@ input[type=submit]:active {
 /* --------------------------------------------- */
 .section-details {
     margin: 0;
-    background-color: #000;
+    background-color: rgb(227, 133, 250);
     height: 2em;
-    color: #dd39ba;
+    color: #000000;
+    font-weight: bold;
     font-size: 1em;
     text-align: right;
     padding: 10px 40px 10px 0;
@@ -357,6 +355,10 @@ header {
 /* --------------------------------------------- */
 /* FEATURES */
 /* --------------------------------------------- */
+.section-features {
+    padding: 30px 0;
+}
+
 .section-features .long-copy {
     margin-bottom: 30px;
 }
