copleted the footer for small & large phones

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -634,35 +634,86 @@ input[type=checkbox] {
 /* FOOTER */
 /* --------------------------------------------- */
 footer {
-    background-color: #333;
+    position: fixed;
+    bottom: 0;
     padding: 50px;
     font-size: 90%;
     height: 390px;
 }
 
-.footer-nav {
-    list-style: none;
-    float: left;
+footer p {
+    color: #a5a0a0;
+    text-align: center;
+    margin-top: 20px;
 }
 
+footer h2 {
+    text-align: center;
+}
+
+.footer-distributed {
+	background-color: #333;
+	box-sizing: border-box;
+	width: 100%;
+	text-align: center;
+	font: bold 16px sans-serif;
+    padding: 30px;
+}
+
+.footer-distributed a:link, a:visited {
+    color: #a5a0a0;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
+	display: inline-block;
+	vertical-align: top;
+    width: 30%;
+}
+
+/* Footer links */
+.footer-distributed .footer-links a{
+	display:inline-block;
+	line-height: 1.8;
+	text-decoration: none;
+	color:  inherit;
+}
+
+.footer-distributed .footer-center i.fa-envelope{
+	font-size: 17px;
+	line-height: 38px;
+    color: #dd39ba;
+}
+
+.footer-distributed .footer-center p{
+	display: inline-block;
+	vertical-align: middle;
+	margin:0;
+}
+
+.footer-distributed .footer-center p span{
+	display:block;
+	font-weight: normal;
+	font-size:14px;
+	line-height:2;
+}
+
+/* Footer Right */
 .social-links {
     list-style: none;
     float: right;
 }
 
-.footer-nav li,
 .social-links li {
     display: inline-block;
     margin-right: 20px;
 }
 
-.footer-nav li:last-child,
 .social-links li:last-child {
     margin-right: 0;
 }
 
-.footer-nav li a:link,
-.footer-nav li a:visited,
 .social-links li a:link,
 .social-links li a:visited {
     text-decoration: none;
@@ -673,29 +724,30 @@ footer {
     transition: color 0.2s;
 }
 
-.footer-nav li a:hover,
-.footer-nav li a:active {
-    color: #ddd;
-}
-
 .social-links li a:link,
 .social-links li a:visited {
     font-size: 160%;
 }
 
-.logo-facebook:hover {
+.logo-facebook:hover,
+.logo-twitter:hover,
+.logo-google:hover,
+.logo-instagram:hover {
+    color: #888;
+}
+.logo-facebook {
     color: #3b5998;
 }
 
-.logo-twitter:hover {
+.logo-twitter {
     color: #00aced;
 }
 
-.logo-google:hover {
+.logo-google {
     color: #dd4b39;
 }
 
-.logo-instagram:hover {
+.logo-instagram {
     color: #517fa4;
 }
 
@@ -706,12 +758,6 @@ footer {
     -webkit-transition: color 0.2s;
     -o-transition: color 0.2s;
     transition: color 0.2s;
-}
-
-footer p {
-    color: #888;
-    text-align: left;
-    margin-top: 20px;
 }
 
 /* --------------------------------------------- */
@@ -726,7 +772,7 @@ footer p {
     }
 }
 
-/* small tablet to basic desktop: from 770px to 1024px */
+/* large tablet to basic desktop: from 960px to 1024px */
 @media only screen and (max-width: 1024px) {
     body { font-size: 18px; }
     .long-copy {
@@ -735,19 +781,16 @@ footer p {
     }
 
     .steps-box { margin-top: 30px; }
-   
     .works-step { margin-bottom: 40px; }
     .works-step:last-of-type { margin-bottom: 60px; }
 
     .app-screen { width: 50%; }
-
     .icon-small {
         width: 17px;
         margin-right: 5px;
     }
 
     .city-feature { font-size: 90%; }
-
     .plan-box {
         width: 100%;
         margin-left: 0%;
@@ -755,17 +798,11 @@ footer p {
 
     .plan-price { font-size: 250%; }
     .contact-form { width: 80%; }
-
-    footer {
-        font-size: 85%;
-        padding: 25px 0;
-    }
-
     .main-nav { display: inline-block; }
     .topnav { display: none; }
 }
 
-/* phones to large tablets: from 480px to 960px */
+/* phones to large tablets: from 620px to 960px */
 @media only screen and (max-width: 960px) {
     body { font-size: 16px; }
     .row,
@@ -787,7 +824,6 @@ footer p {
     }
 
     .main-nav li { display: block; }
-
     .main-nav li a:link,
     .main-nav li a:visited {
         display: block;
@@ -877,11 +913,35 @@ footer p {
         text-align: center;
     }
 
+    footer {
+        position: static;
+        font-size: 85%;
+        padding: 25px 0;
+    }
 
+    .social-links {
+        float: none;
+    }
 }
 
 /* Small phones: from 0 to 480px */
 @media only screen and (max-width: 480px) {
     section { padding: 25px 0; }
     .contact-form { width: 100%; }
+}
+
+@media (max-width: 880px) {
+
+	.footer-distributed .footer-left,
+	.footer-distributed .footer-center,
+	.footer-distributed .footer-right{
+		display: block;
+		width: 100%;
+		margin-bottom: 40px;
+	}
+
+	.footer-distributed .footer-center i{
+		margin-left: 0;
+	}
+
 }
