--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -487,12 +487,13 @@ footer p {
     color: #a5a0a0;
 }
 
-.footer-distributed .footer-left,
-.footer-distributed .footer-center,
-.footer-distributed .footer-right{
+.footer-distributed .f-left-top, 
+.footer-distributed .f-left-bottom,
+.footer-distributed .f-center,
+.footer-distributed .f-right {
 	display: inline-block;
 	vertical-align: top;
-    width: 30%;
+    width: 100%;
 }
 
 /* Footer links */
@@ -503,19 +504,19 @@ footer p {
 	color:  inherit;
 }
 
-.footer-distributed .footer-center i.fa-envelope{
+.footer-distributed .f-center i.fa-envelope{
 	font-size: 17px;
 	line-height: 38px;
     color: #dd39ba;
 }
 
-.footer-distributed .footer-center p{
+.footer-distributed .f-center p{
 	display: inline-block;
 	vertical-align: middle;
 	margin:0;
 }
 
-.footer-distributed .footer-center p span{
+.footer-distributed .f-center p span{
 	display:block;
 	font-weight: normal;
 	font-size:14px;
@@ -609,6 +610,28 @@ footer p {
 
 /* phones to large tablets: from 620px to 960px */
 @media only screen and (max-width: 960px) {
+    .footer-distributed {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 10px;
+        padding: 5%;
+        line-height: .9em;
+    }
+
+    .footer-distributed .f-left-top,
+	.footer-distributed .f-center,
+    .footer-distributed .f-left-bottom,
+	.footer-distributed .f-right {
+        width: 100%;
+        margin: 10px;
+        font-size: 15px;
+	}
+
+    .footer-distributed .f-left-bottom,
+	.footer-distributed .f-right {
+        margin-left: 20%;
+	}
+
+
     body { font-size: 16px; }
     .row,
     .col {
@@ -646,7 +669,11 @@ footer p {
     }
 
     h1 { font-size: 180%; }
-    h2 { font-size: 150%; }
+
+    footer h2 {
+        text-align: left;
+        font-size: 150%; 
+    }
 
     .long-copy {
         width: 100%;
@@ -681,18 +708,22 @@ footer p {
         width: 100%;
         padding: 0px;
     }
+
+    .social-links { float: none; }
 }
 
 /* phones to largePhone: from 480px to 620px */
 @media only screen and (max-width: 620px) {
-    .footer-distributed .footer-left,
-	.footer-distributed .footer-center,
-	.footer-distributed .footer-right{
+    .footer-distributed .f-left-top,
+    .footer-distributed .f-left-bottom,
+	.footer-distributed .f-center,
+	.footer-distributed .f-right{
 		width: 100%;
 		margin: 20px;
+        text-align: center;
 	}
 
-	.footer-distributed .footer-center i{
+	.footer-distributed .f-center i{
 		margin-left: 0;
 	}
 
@@ -730,8 +761,11 @@ footer p {
         padding: 25px 0;
     }
 
-    .social-links { float: none; }
+    footer h2 {
+        text-align: center;
+    }
 
+    .social-links { float: none; }
     .footer-distributed,
     .section-features h3 {
         text-align: center;
