--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -43,7 +43,6 @@ body {
     margin: 0 auto;
 }
 
-
 .box {
     padding: 1%;
 }
@@ -69,7 +68,7 @@ h2 {
     font-size: 180%;
     word-spacing: 2px;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     letter-spacing: 1px;
 }
 
@@ -87,6 +86,10 @@ ul, li {
 
 .x-margin-bottom {
     margin-bottom: 50px;
+}
+
+.x-margin-bottom-25 {
+    margin-bottom: 25px;
 }
 
 .x-padding-top {
@@ -361,8 +364,24 @@ header {
     padding: 30px 0;
 }
 
+.section-prices {
+    padding: 30px 0;
+}
+
 .section-features .long-copy {
     margin-bottom: 30px;
+}
+
+.section-prices .long-copy {
+    margin-bottom: 30px;
+}
+
+.tratamento-extra .col {
+    margin: 0;
+}
+
+.tratamento-extra .long-copy {
+    margin-bottom: 400px;
 }
 
 .svg-img img {
@@ -374,6 +393,13 @@ header {
     margin-top: 120px;
     margin-bottom: -80px;
     height: auto;
+    border-radius: 50%;
+    width: 250px;
+}
+
+.center {
+    border-style: none;
+    margin-bottom: 30px;
     border-radius: 50%;
     width: 250px;
 }
@@ -396,6 +422,10 @@ header {
 }
 
 .section-promotion h3 {
+    text-align: center;
+}
+
+.price-img {
     text-align: center;
 }
 
@@ -523,10 +553,10 @@ footer p {
 }
 
 .footer-distributed {
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 10px;
-        padding: 2%;
-        line-height: .9em;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    padding: 2%;
+    line-height: .9em;
 }
 
 .footer-distributed .f-left-top,
@@ -696,10 +726,34 @@ footer h2 {
         width: 100%;
     }
 
+    .box {
+        padding: 0;
+    }
+
+    .box p {
+        line-height: 25px;
+    }
+
+    .col {
+        margin: 0;
+    }
+
     .section-header .btn {
         position: absolute;
         top: 80%;
         left: 30%;
+    }
+
+    .xxl-padding-bottom {
+        padding-bottom: 400px;
+    }
+    
+    .section-features {
+        padding: 0;
+    }
+
+    .section-prices {
+        padding: 0;
     }
 
     .main-nav {
@@ -741,6 +795,22 @@ footer h2 {
 
     h1 { font-size: 180%; }
 
+    h2 { 
+        font-size: 140%;
+        margin-top: 20px;
+     }
+
+    .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    ul, li {
+        list-style-type: none;
+        padding-bottom: 10px;
+    }
+    
     .footer-distributed {
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 10px;
@@ -798,6 +868,10 @@ footer h2 {
         margin-bottom: 0px;
     }
 
+    .xxl-padding-bottom {
+        padding-bottom: 0px;
+    }
+
     .section-promotion p {
         margin-bottom: 20px;
     }
@@ -843,6 +917,10 @@ footer h2 {
         margin-bottom: 10px;
     }
     
+    ul, li {
+        padding-bottom: 0px;
+    }
+
     footer {
         position: static;
         font-size: 85%;
@@ -856,6 +934,10 @@ footer h2 {
     .social-links { float: none; }
     .footer-distributed,
     .section-features h3 {
+        text-align: center;
+    }
+
+    .section-prices h3 {
         text-align: center;
     }
 }
