--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -23,7 +23,6 @@ body {
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
-    overflow-x: hidden;
 }
 
 .clearfix {zoom: 1}
@@ -107,8 +106,7 @@ ul, li {
 /* ---- PARAGRAPHS ---- */
 .long-copy {
     line-height: 145%;
-    width: 70%;
-    margin-left: 15%;
+    width: 100%;
 }
 
 .box p {
@@ -283,54 +281,54 @@ header {
 /* --------------------------------------------- */
 /* NAVIGATION */
 /* --------------------------------------------- */
-    /* Style the navigation menu */
-    .topnav {
-        overflow: hidden;
-        background-color: #dd39ba;
-        position: relative;
-    }
+/* Style the navigation menu */
+.topnav {
+    overflow: hidden;
+    background-color: #dd39ba;
+    position: relative;
+}
 
-    /* Hide the links inside the navigation menu (except for logo/home) */
-    .topnav #myLinks {
-        display: none;
-        margin-top: 12em;
-        text-align: center;
-    }
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+    display: none;
+    margin-top: 12em;
+    text-align: center;
+}
 
-    /* Style navigation menu links */
-    .topnav a {
-        color: white;
-        padding: 10px;
-        text-decoration: none;
-        font-size: 18px;
-        font-weight: bold;
-        display: block;
-        margin: 20px;
-    }
+/* Style navigation menu links */
+.topnav a {
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+    display: block;
+    margin: 20px;
+}
 
-    /* Style the hamburger menu */
-    .topnav a.icon {
-        border-radius: 10%;
-        background:#8000ff;
-        display: block;
-        position: absolute;
-        right: 0;
-        top: 0;
-        opacity: 0.5;
-    }
+/* Style the hamburger menu */
+.topnav a.icon {
+    border-radius: 10%;
+    background:#8000ff;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    opacity: 0.5;
+}
 
-    /* Add a grey background color on mouse-over */
-    .topnav a:hover {
-        background-color: #c99bf7;
-        opacity: 50%;
-        color: #130125;
-    }
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+    background-color: #c99bf7;
+    opacity: 50%;
+    color: #130125;
+}
 
-    /* Style the active link (or home/logo) */
-    .active {
-        background-color: #4CAF50;
-        color: white;
-    }
+/* Style the active link (or home/logo) */
+.active {
+    background-color: #4CAF50;
+    color: white;
+}
 
 /* Sticky nav */
 .sticky {
@@ -375,12 +373,6 @@ header {
 .section-features .long-copy {
     margin-bottom: 30px;
 }
-
-/*
-.section-prices .long-copy {
-    margin-bottom: 30px;
-}
-*/
 
 .section-prices h3 {
     text-align: center;
@@ -638,6 +630,123 @@ footer h2 {
     transition: color 0.2s;
 }
 
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-bottom: 400px;
+  }
+
+.photo img {
+    max-width: 100%;
+  }
+
+/* --------------------------------------------- */
+/* GALLERY */
+/* --------------------------------------------- */  
+ .container {
+     display: grid;
+     grid-template-columns: repeat(6, 1fr);
+     grid-auto-rows: 100px;
+     grid-gap: 10px;
+     max-width: 1140px;
+     margin: 10px auto 0 auto;
+     grid-auto-flow: dense;
+ }
+
+ .gallery-item {
+     width: 100%;
+     height: 100%;
+     position: relative;
+ }
+
+.gallery-item .image {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.gallery-item .image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
+    cursor: pointer;
+    transition: .5s ease-in-out;
+}
+
+.gallery-item:hover .image img {
+    transform: scale(1.5);
+}
+
+.gallery-item .text {
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    pointer-events: none;
+    z-index: 4;
+    transition: .3s ease-in-out;
+    backdrop-filter: blur(10px) saturate(1.8);
+    -webkit-backdrop-filter: blur(5px) saturate(1.8);
+    
+}
+
+.gallery-item:hover .text {
+    opacity: 1;
+}
+
+.w-1 {
+    grid-column: span 1;
+}
+
+.w-2 {
+    grid-column: span 2;
+}
+
+.w-3 {
+    grid-column: span 3;
+}
+
+.w-4 {
+    grid-column: span 4;
+}
+
+.w-5 {
+    grid-column: span 5;
+}
+
+.w-6 {
+    grid-column: span 6;
+}
+
+.h-1 {
+    grid-row: span 1;
+}
+
+.h-2 {
+    grid-row: span 2;
+}
+
+.h-3 {
+    grid-row: span 3;
+}
+
+.h-4 {
+    grid-row: span 4;
+}
+
+.h-5 {
+    grid-row: span 5;
+}
+
+.h-6 {
+    grid-row: span 6;
+}
+
 /* --------------------------------------------- */
 /* QUERIES */
 /* --------------------------------------------- */
@@ -696,27 +805,23 @@ footer h2 {
     }
 
     .social-links { float: none; }
+
+    .gallery {
+        grid-template-columns: repeat(3, 1fr);
+      }
 }
 
 /* phones to large tablets: from 620px to 960px */
 @media only screen and (max-width: 960px) {
     body { font-size: 16px; }
     .row,
-    .col {
-        width: 100%;
-    }
+    .col { width: 100%; }
 
-    .box {
-        padding: 0;
-    }
+    .box { padding: 0; }
 
-    .box p {
-        line-height: 25px;
-    }
+    .box p { line-height: 25px; }
 
-    .col {
-        margin: 0;
-    }
+    .col { margin: 0; }
 
     .section-header .btn {
         position: absolute;
@@ -724,17 +829,11 @@ footer h2 {
         left: 30%;
     }
 
-    .xxl-padding-bottom {
-        padding-bottom: 400px;
-    }
+    .xxl-padding-bottom { padding-bottom: 400px; }
     
-    .section-features {
-        padding: 0;
-    }
+    .section-features { padding: 0; }
 
-    .section-prices {
-        padding: 0;
-    }
+    .section-prices { padding: 0; }
 
     .main-nav {
         display: none;
@@ -760,13 +859,9 @@ footer h2 {
         color: #555;
     }
 
-    header {
-        display: none;
-    }
+    header { display: none; }
 
-    .topnav {
-        display: block;
-    }
+    .topnav { display: block; }
 
     .topnav img {
         float: left;
@@ -839,35 +934,27 @@ footer h2 {
         padding: 12px;
         font-size: 16px;
     }
+
+    .gallery {
+        grid-template-columns: repeat(2, 1fr)
+      }
 }
 
 /* phones to largePhone: from 480px to 620px */
 @media only screen and (max-width: 620px) {
-
-    .section-promotion {
-        margin-bottom: 0px;
-    }
-
-    .xxl-padding-bottom {
-        padding-bottom: 0px;
-    }
-
-    .section-promotion p {
-        margin-bottom: 20px;
-    }
-
+    .section-promotion { margin-bottom: 0px; }
+    .xxl-padding-bottom { padding-bottom: 0px; }
+    .section-promotion p { margin-bottom: 20px; }
     .footer-distributed .f-left-top,
     .footer-distributed .f-left-bottom,
 	.footer-distributed .f-center,
-	.footer-distributed .f-right{
+	.footer-distributed .f-right {
 		width: 100%;
 		margin: 20px;
         text-align: center;
 	}
 
-	.footer-distributed .f-center i{
-		margin-left: 0;
-	}
+	.footer-distributed .f-center i{ margin-left: 0; }
 
     .footer-distributed {
         grid-template-columns: repeat(1, 1fr);
@@ -893,13 +980,9 @@ footer h2 {
         width: 250px;
     }
 
-    h2 {
-        margin-bottom: 10px;
-    }
+    h2 { margin-bottom: 10px; }
     
-    ul, li {
-        padding-bottom: 0px;
-    }
+    ul, li { padding-bottom: 0px; }
 
     footer {
         position: static;
@@ -907,9 +990,7 @@ footer h2 {
         padding: 25px 0;
     }
 
-    footer h2 {
-        text-align: center;
-    }
+    footer h2 { text-align: center; }
 
     .social-links { float: none; }
     .footer-distributed,
@@ -917,13 +998,26 @@ footer h2 {
         text-align: center;
     }
 
-    .section-prices h3 {
-        text-align: center;
+    .section-prices h3 { text-align: center; }
+
+    .gallery {
+        grid-template-columns: repeat(1, 1fr);
+        margin-bottom: 0px;
+      }
+
+    .container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .w-1, .w-2, .w-3, .w-4, .w-5, .w-6 {
+        grid-column: span 1;
+        grid-row: span 2;
     }
 }
 
 /* Small phones: from 0 to 480px */
 @media only screen and (max-width: 480px) {
+    
     .section-features .long-copy {
         margin-bottom: 10px;
     }
@@ -933,15 +1027,9 @@ footer h2 {
         margin-bottom: -120px;
     }
 
-    .section-gallery {
-        margin: 20px auto;
-    }
+    .section-gallery { margin: 20px auto; }
 
-    .section-promotion h2 {
-        margin: 20px 0 10px 0;
-    }
+    .section-promotion h2 { margin: 20px 0 10px 0; }
 
-    h3 {
-        margin-top: 20px;
-    }
+    h3 { margin-top: 20px; }
 }
